objects/Opportunity_Snapshot__c.object
<CustomObject>
    <description>created to be used for analytic snapshot for opportunity pipeline</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approximate_Energy_Credit__c</fullName>
        <label>Approximate Energy Credit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approximate_Install_Date__c</fullName>
        <label>Approximate Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bookings_Value__c</fullName>
        <label>Bookings Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_Size_MW__c</fullName>
        <label>Current Project System Size (w)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_Size__c</fullName>
        <label>Current Project System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_PB3_Complete__c</fullName>
        <label>Date PB3 Complete</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Snapshot__c</fullName>
        <label>Date of Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_PB3_Submission__c</fullName>
        <formula>Estimated_PB3_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est PB3 Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_PB3_Submission_Date__c</fullName>
        <label>Estimated PB3 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Yearly_Production_in_kWh__c</fullName>
        <label>Expected Yearly Production in kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Financing_Source__c</fullName>
        <label>Final Financing Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Specific__c</fullName>
        <label>Lead Source Specific</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Diego Home Show 2007</fullName>
                </value>
                <value>
                    <fullName>Shades of Green</fullName>
                </value>
                <value>
                    <fullName>Solano Stroll 2007</fullName>
                </value>
                <value>
                    <fullName>Solar Homes Tour</fullName>
                </value>
                <value>
                    <fullName>Solar Power 2006</fullName>
                </value>
                <value>
                    <fullName>Solar Power 2007</fullName>
                </value>
                <value>
                    <fullName>West Coast Green</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Radio - NPR</fullName>
                </value>
                <value>
                    <fullName>Radio - The River</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>MSN</fullName>
                </value>
                <value>
                    <fullName>Yahoo</fullName>
                </value>
                <value>
                    <fullName>Other Search Engine</fullName>
                </value>
                <value>
                    <fullName>CalFinder</fullName>
                </value>
                <value>
                    <fullName>Construction Industry</fullName>
                </value>
                <value>
                    <fullName>Diamond Certified</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>FindSolar</fullName>
                </value>
                <value>
                    <fullName>Other Installer</fullName>
                </value>
                <value>
                    <fullName>Renewable Energy Access</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor - Evergreen</fullName>
                </value>
                <value>
                    <fullName>Vendor - GE</fullName>
                </value>
                <value>
                    <fullName>Vendor - Sharp</fullName>
                </value>
                <value>
                    <fullName>Verde Energy</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Text__c</fullName>
        <description>text value of lead source</description>
        <inlineHelpText>text value of lead source</inlineHelpText>
        <label>Lead Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <label>Opportunity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Source_Specifics__c</fullName>
        <label>Opportunity Lead Source Specifics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Source__c</fullName>
        <label>Opportunity Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Direct Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Event/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>MQL notification</fullName>
                </value>
                <value>
                    <fullName>Bid Boards</fullName>
                </value>
                <value>
                    <fullName>Prospected</fullName>
                </value>
                <value>
                    <fullName>Customer Originated - Email</fullName>
                </value>
                <value>
                    <fullName>Customer Originated - Phone</fullName>
                </value>
                <value>
                    <fullName>Customer Originated - RFP</fullName>
                </value>
                <value>
                    <fullName>Customer Originated - Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <label>Opportunity Record Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>opportunity owner manager</inlineHelpText>
        <label>Oppty Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <label>Owner Manager</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB7_Approval_Date_from_CC_Submittal__c</fullName>
        <label>PB7 Approval Date from CC Submittal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB7_Submittal_Date_from_Project__c</fullName>
        <label>PB7 Submittal Date from Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Likelihood__c</fullName>
        <label>Project Likelihood</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted_Date__c</fullName>
        <label>Proposal Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_System_Size_watts__c</fullName>
        <label>Proposed System Size (watts)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>from SF</description>
        <label>Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>LOI Signed</fullName>
                </value>
                <value>
                    <fullName>Option Lease Executed</fullName>
                </value>
                <value>
                    <fullName>Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Shortlisted/Interviews</fullName>
                </value>
                <value>
                    <fullName>Project Awarded</fullName>
                </value>
                <value>
                    <fullName>Project Booked</fullName>
                </value>
                <value>
                    <fullName>EPC Signed</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Not Ready / Pushed Out</fullName>
                </value>
                <value>
                    <fullName>Disqualified - Sales</fullName>
                </value>
                <value>
                    <fullName>Disqualified - Technical</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Text__c</fullName>
        <description>text value of TYPE field on opportunity</description>
        <inlineHelpText>text value of TYPE field on opportunity</inlineHelpText>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Design Only</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Sub-Contract Install</fullName>
                </value>
                <value>
                    <fullName>Turnkey System</fullName>
                </value>
                <value>
                    <fullName>Upgrades</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Pipeline_Watts__c</fullName>
        <label>Weight Pipeline Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Contract_Price__c</fullName>
        <label>Weighted Pipeline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Snapshot_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>